unpackaged/main/default/objects/Contact/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <formula>Account.Account_Executive__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive</label>
    <type>Text</type>
</CustomField>