unpackaged/main/default/objects/Contact/fields/AcctSeed__Taxpayer_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Taxpayer_Identification_Number__c</fullName>
    <label>Taxpayer Identification Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>