unpackaged/main/default/objects/Contact/fields/Connectwise_External_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Connectwise_External_Id_c__c</fullName>
    <label>Connectwise_External_Id__c</label>
    <length>55</length>
    <type>Text</type>
</CustomField>