unpackaged/main/default/objects/Contact/fields/DSCORGPKG__Company_HQ_State__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Company_HQ_State__c</fullName>
    <label>Company HQ State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>