unpackaged/main/default/objects/Contact/fields/DSCORGPKG__DiscoverOrg_Created_On__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_Created_On__c</fullName>
    <label>Created by DiscoverOrg</label>
    <type>DateTime</type>
</CustomField>