unpackaged/main/default/objects/Contact/fields/DSCORGPKG__DiscoverOrg_State_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__DiscoverOrg_State_Full_Name__c</fullName>
    <label>DiscoverOrg State Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>