unpackaged/main/default/objects/Contact/fields/DSCORGPKG__External_DiscoverOrg_Id__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__External_DiscoverOrg_Id__c</fullName>
    <externalId>true</externalId>
    <label>DiscoverOrg Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>