unpackaged/main/default/objects/Contact/fields/DSCORGPKG__ITOrgChart__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__ITOrgChart__c</fullName>
    <formula>IF(ISBLANK(Account.DSCORGPKG__DiscoverOrg_ID__c) = false, 
HYPERLINK( 
'/apex/DSCORGPKG__itorgchart?co_id=' +  Account.DSCORGPKG__DiscoverOrg_ID__c + '&amp;scrollTo=' +  DSCORGPKG__DiscoverOrg_ID__c , 
'View', 
'_blank') , 
'N/A')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Org Chart</label>
    <type>Text</type>
</CustomField>