unpackaged/main/default/objects/Contact/fields/DSCORGPKG__Job_Function__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Job_Function__c</fullName>
    <label>Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>