unpackaged/main/default/objects/Contact/fields/DSCORGPKG__REMOVELinkedinURL__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__REMOVELinkedinURL__c</fullName>
    <label>REMOVELinkedinURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>