unpackaged/main/default/objects/Contact/fields/LH__Formula_Test__c.field-meta.xml
<CustomField>
    <fullName>LH__Formula_Test__c</fullName>
    <formula>LH__Currency_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>