unpackaged/main/default/objects/Contact/fields/Nick_Name__c.field-meta.xml
<CustomField>
    <fullName>Nick_Name__c</fullName>
    <label>Nick Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>