unpackaged/main/default/objects/Contact/fields/Receive_Outage_Email_Notifcations__c.field-meta.xml
<CustomField>
    <fullName>Receive_Outage_Email_Notifcations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter contacts that we would like to mass email outage notifications</description>
    <label>Receive Outage Email Notifcations</label>
    <type>Checkbox</type>
</CustomField>