unpackaged/main/default/objects/Contact/fields/Service_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Service_Anniversary__c</fullName>
    <label>Service Anniversary</label>
    <type>Date</type>
</CustomField>