unpackaged/main/default/objects/Contact/fields/zaapit__Create_Task__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Create_Task__c</fullName>
    <label>Create Task (M)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Send Letter</fullName>
            </value>
            <value>
                <fullName>Send Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>