unpackaged/main/default/objects/Contact/listViews/AcctSeed__X1099_Contacts.listView-meta.xml
<ListView>
    <fullName>AcctSeed__X1099_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>AcctSeed__X1099_Vendor__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__X1099_Vendor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>x1099 Contacts</label>
</ListView>