unpackaged/main/default/objects/Contact/listViews/All_Contacts_Dependable_Technologies.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Dependable_Technologies</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Dependable Technologies</value>
    </filters>
    <label>All Contacts Dependable Technologies</label>
    <language>en_US</language>
</ListView>