unpackaged/main/default/objects/Contact/listViews/Bus_Dev.listView-meta.xml
<ListView>
    <fullName>Bus_Dev</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Bus Dev</value>
    </filters>
    <label>Bus Dev</label>
    <language>en_US</language>
    <sharedTo>
        <role>Dallas_Branch_Manager</role>
        <role>Major_Accounts</role>
        <role>Pittsburgh_Branch_Manager</role>
        <role>President</role>
    </sharedTo>
</ListView>