unpackaged/main/default/objects/Contact/listViews/Contacts_Comm3.listView-meta.xml
<ListView>
    <fullName>Contacts_Comm3</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Comm3</value>
    </filters>
    <label>Contacts - Comm3</label>
    <language>en_US</language>
    <sharedTo>
        <group>Group_Comm3</group>
    </sharedTo>
</ListView>